@@ -11,7 +11,16 @@ use base qw( Alien::Base );
 
 =pod
 
-The intention is for this to eventually replace L<Alien::Libarchive>
+The older L<Alien::Libarchive> exists as a compatibility layer over this module.
+
+=head1 CAVEATS
+
+On some older operating systems some of the dependencies may not build, L<Alien::Nettle>
+does not build correctly with older versions of OpenSSL.  If you do not need the encryption
+features provided by L<Alien::Nettle> and C<nettle>, then you can skip it when you install
+this module:
+
+ $ env ALIEN_LIBARCHIVE_DEPS=Alien::xz,Alien::LZO,Alien::Libbz2,Alien::Libxml2 cpanm Alien::Libarchive3
 
 =cut
 
